--- a/Assets/Code/Runtime/Adam.Runtime.asmdef
+++ b/Assets/Code/Runtime/Adam.Runtime.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Adam.Runtime",
     "rootNamespace": "Adam.Runtime",
-    "references": [],
+    "references": [
+        "GUID:75469ad4d38634e559750d17036d5f7c"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
