--- a/Assets/Code/Editor/Adam.Editor.asmdef
+++ b/Assets/Code/Editor/Adam.Editor.asmdef
@@ -1,7 +1,11 @@
 {
     "name": "Adam.Editor",
     "rootNamespace": "Adam.Editor",
-    "references": [],
+    "references": [
+        "GUID:bc85b29c7af40894ba8888f0e6c1b3c5",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
+    ],
     "includePlatforms": [
         "Editor"
     ],
